[package]
name = "MARlea_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marlea_engine = { git = "https://github.com/nadaso8/MARlea_engine.git", branch = "Experimental"}
pest = "2.7.5"
pest_derive = "2.7.5"
